Few more bug fixes in the new theme

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -261,7 +261,10 @@ body {
         margin-bottom: 0;
     }
 }
+.suggested .box-style{
+    position: relative;
 
+}
 .box-style {
     width: 100%;
     background: @textColorWhite;
