--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -219,6 +219,9 @@
             margin: 0 12px;
             background: none;
         }
+        .user-box{
+            min-width: 300px;
+        }
     }
 
     .quiz .top .first-letter {
