--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
@@ -14,7 +14,9 @@
             <button type="button">
                 <md-icon md-svg-icon="t:add"></md-icon>
                 @*@Html.Svg("~/images/site/icons.svg", "add")*@
-                @IndexResources.UploadFiles
+                <div class="text">
+                    @IndexResources.UploadFiles
+                </div>
             </button>
         </div>
     </li>
