--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Quizzes2.cshtml
@@ -7,7 +7,9 @@
             <div class="quizCreate">
                 <md-icon md-svg-icon="t:add"></md-icon>
                 @*@Html.Svg("~/images/site/icons.svg", "add")*@
-                @GeneralResources.CreateQuiz
+                <div class="text">
+                    @GeneralResources.CreateQuiz
+                </div>
             </div>
         </a>
     </li>
