--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -187,6 +187,9 @@ body .quiz-template .bottom .name {
 .page-tabs md-tabs-wrapper {
   margin-bottom: 0;
 }
+.suggested .box-style {
+  position: relative;
+}
 .box-style {
   background: #ffffff;
   box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
