--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -92,6 +92,10 @@
         background: @buttonColorBlue;
         box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.69);
 
+        &:hover {
+            background: @buttonColorBlueHover;
+        }
+
         &:after {
             content: '';
             display: block;
@@ -499,7 +503,7 @@
 
                     .close {
                         position: relative;
-                        display: inline-block;
+                        display: block;
                         width: 14px;
                         height: 14px;
                         overflow: hidden;
