--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -79,6 +79,9 @@
   background: #4190b9;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.69);
 }
+.chat-side-nav .chat .tab:hover {
+  background: #297095;
+}
 .chat-side-nav .chat .tab:after {
   content: '';
   display: block;
@@ -433,7 +436,7 @@
 }
 .chat .content .conversasion .header .back .close {
   position: relative;
-  display: inline-block;
+  display: block;
   width: 14px;
   height: 14px;
   overflow: hidden;
