--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/header.rtl.css
@@ -65,11 +65,11 @@
   background: #212325 !important;
 }
 .login {
-  background: #3293f6;
+  background: #3293F6;
   color: #212325;
 }
 .login:hover {
-  background: #3293f6 !important;
+  background: #3293F6 !important;
 }
 .search-wrapper {
   display: inline;
