fixed few bugs in the new theme colors

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -261,10 +261,11 @@ body {
         margin-bottom: 0;
     }
 }
-.suggested .box-style{
-    position: relative;
 
+.suggested .box-style {
+    position: relative;
 }
+
 .box-style {
     width: 100%;
     background: @textColorWhite;
@@ -357,14 +358,14 @@ body {
     .display .number {
         float: left;
         display: inline-block;
-        height: 110px;
+        height: 116px;
         width: 100%;
 
         h3, h5 {
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            margin: 0 0 8px 0;
+            margin: 0 0 14px 0;
             padding: 0;
             font-size: 25px;
             line-height: 29px;
@@ -397,8 +398,7 @@ body {
         }
 
         .status {
-            margin-top: 20px;
-            font-size: 15px;
+            margin-top: 18px;
 
             .status-title {
                 float: left;
@@ -443,6 +443,14 @@ body {
             bottom: 2px;
             right: 6px;
         }
+    }
+}
+
+
+.inviteBtn {
+    .icon {
+        width: 20px;
+        height: 20px;
     }
 }
 
@@ -761,7 +769,7 @@ md-icon {
 
 .ribbon {
     position: absolute;
-    bottom: 4.4em;
+    bottom: 4em;
     right: 15px;
     margin-left: 1em;
     padding: 0.3em .5em;
