--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -18,9 +18,10 @@
         }
 
         span {
-            font-size: 18px;
+            font-size: 20px;
             display: inline-block;
             width: 100%;
+            color: @buttonColorBlue;
         }
 
         .img-circle {
