--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.css
@@ -33,6 +33,9 @@
 .search .page-head .close svg {
   fill: #888b8e;
 }
+.search .tab-content {
+  margin: 0 -8px;
+}
 .search .item,
 .search .quiz {
   position: relative;
