--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
@@ -23,6 +23,10 @@
         fill: #888b8e;
     }
 
+    .tab-content{
+        margin: 0 -8px;
+    }
+
     .item, .quiz {
         position: relative;
         overflow: hidden;
