--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -261,7 +261,7 @@ body .quiz-template .bottom .name {
 .box-style .display .number {
   float: right;
   display: inline-block;
-  height: 110px;
+  height: 116px;
   width: 100%;
 }
 .box-style .display .number h3,
@@ -269,7 +269,7 @@ body .quiz-template .bottom .name {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  margin: 0 0 8px 0;
+  margin: 0 0 14px 0;
   padding: 0;
   font-size: 25px;
   line-height: 29px;
@@ -298,8 +298,7 @@ body .quiz-template .bottom .name {
   display: block;
 }
 .box-style .progress-info .status {
-  margin-top: 20px;
-  font-size: 15px;
+  margin-top: 18px;
 }
 .box-style .progress-info .status .status-title {
   float: right;
@@ -336,6 +335,10 @@ body .quiz-template .bottom .name {
   position: absolute;
   bottom: 2px;
   left: 6px;
+}
+.inviteBtn .icon {
+  width: 20px;
+  height: 20px;
 }
 /*.create-box {
 
@@ -577,7 +580,7 @@ md-icon {
 }
 .ribbon {
   position: absolute;
-  bottom: 4.4em;
+  bottom: 4em;
   left: 15px;
   margin-right: 1em;
   padding: 0.3em .5em;
