--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -1,11 +1,15 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Box.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
-<div ng-controller="UniversityController as u">
-    <a class="university" ga-track-event="['dashboard', 'to university']" ng-if="u.loaded" ng-href="{{::u.info.url}}" univeristy-cover="{{::u.info.cover}}">
-        <img class="universityimg" ng-src="{{::u.info.logo}}" alt="univerisy picture" width="70" height="70" />
-        <div class="universityStats">
+<div ng-controller="UniversityController as u" univeristy-cover="{{::u.info.cover}}">
+    <a class="university" ga-track-event="['dashboard', 'to university']" ng-if="u.loaded" ng-href="{{::u.info.url}}">
+        <div class="top">
+            <img class="universityimg" ng-src="{{::u.info.logo}}" alt="univerisy picture" width="52" height="52" />
             <div class="uni-name" ng-bind="::u.info.name"></div>
-            <div layout="row" layout-align="space-between center">
+        </div>
+        <div class="bottom">
+            <div class="action-btn">@GeneralResources.BrowseClasses</div>
+            <div class="stats-bg"></div>
+            <div class="universityStats" layout="row" layout-align="space-between center">
                 <div>{{::u.info.numOfBoxes | megaNumber}} @GeneralResources.Classes</div>
                 <div>{{::u.info.numOfUsers | megaNumber}} @GeneralResources.Members</div>
                 <div>{{::u.info.numOfItems | megaNumber}} @BoxResources.Items</div>
