--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -6,9 +6,9 @@
         <div class="universityStats">
             <div class="uni-name" ng-bind="::u.info.name"></div>
             <div layout="row" layout-align="space-between center">
-                <div>{{::u.info.numOfBoxes | megaNumber}} @GeneralResources.Classes</div>
-                <div>{{::u.info.numOfUsers | megaNumber}} @GeneralResources.Members</div>
-                <div>{{::u.info.numOfItems | megaNumber}} @BoxResources.Items</div>
+                <div>{{::u.info.boxes | megaNumber}} @GeneralResources.Classes</div>
+                <div>{{::u.info.users | megaNumber}} @GeneralResources.Members</div>
+                <div>{{::u.info.items | megaNumber}} @BoxResources.Items</div>
             </div>
         </div>
     </a>
