--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
@@ -937,7 +937,7 @@
             }
 
             &.check-us {
-                background: @backgroundColor;
+                background: #181c1d;
                 color: @textColorWhite;
                 padding-bottom: 100px;
 
@@ -968,7 +968,7 @@
             }
 
             &.reviews {
-                background: @textColorWhite;
+                background: @textColorLightWhite;
                 padding-top: 10px;
                 overflow-x: hidden;
 
