--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -752,6 +752,18 @@
     }
 }
 
+.chat-tooltip {
+    text-align: center;
+
+    .md-content {
+        padding: 4px 10px;
+
+        div {
+            line-height: normal;
+        }
+    }
+}
+
 .chat-item-preview {
     //margin-left: -320px;
     max-height: 95vh;
