--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
@@ -856,7 +856,7 @@
   right: -20px;
 }
 .homePage .home-page-body section.check-us {
-  background: #dadada;
+  background: #181c1d;
   color: #ffffff;
   padding-bottom: 100px;
 }
@@ -880,7 +880,7 @@
   color: #4190b9;
 }
 .homePage .home-page-body section.reviews {
-  background: #ffffff;
+  background: #f5f5f5;
   padding-top: 10px;
   overflow-x: hidden;
 }
