--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
@@ -403,7 +403,7 @@ iframe {
 .static-page.apps-page .app-links a {
   display: inline-block;
   margin-bottom: 10px;
-  border: 1px solid #212325;
+  border: 1px solid #f5f5f5;
   border-radius: 7px;
   overflow: hidden;
   margin: 0 10px;
@@ -512,7 +512,7 @@ iframe {
 .static-page-footer .content .info .social-links svg {
   width: 30px;
   height: 30px;
-  fill: #212325;
+  fill: #ffffff;
   margin-right: 10px;
   display: inline-block;
 }
@@ -578,7 +578,7 @@ iframe {
   }
 }
 .static-page {
-  background: #ffffff;
+  background: #f5f5f5;
 }
 .static-page > .content {
   margin-top: 60px;
@@ -749,7 +749,7 @@ iframe {
   /* min-height: 240px; */
   position: relative;
   margin-top: 70px;
-  background-color: #212325;
+  background-color: #ffffff;
 }
 .aboutUs-page .advantages .card-icon {
   display: inline-block;
@@ -794,7 +794,7 @@ iframe {
   fill: #ffffff;
 }
 .aboutUs-page .advantages .card-data {
-  background: #fff;
+  background: #ffffff;
   padding: 40px 10px 25px 10px;
   min-height: 160px;
 }
@@ -805,7 +805,7 @@ iframe {
 }
 .aboutUs-page .advantages .card-title {
   font-weight: bold;
-  color: #ffffff;
+  color: #5d6063;
 }
 .aboutUs-page .advantages .card-desc span {
   line-height: 17px;
@@ -840,8 +840,8 @@ iframe {
   padding-top: 70px;
   background: #fff;
   padding-bottom: 15px;
-  background: #212325;
-  color: #ffffff;
+  background: #ffffff;
+  color: #212325;
 }
 .aboutUs-page .team .portlet .desc {
   height: 44px;
@@ -916,7 +916,7 @@ iframe {
   font-size: 22px;
 }
 .apps-page {
-  background: #dadada;
+  background: #181c1d;
 }
 .apps-page .top-image {
   background-position: 50% 10%;
@@ -939,13 +939,13 @@ iframe {
   width: 100%;
 }
 .apps-page section:nth-child(3) {
-  background: #212325;
+  background: #f5f5f5;
 }
 .apps-page section:nth-child(4) {
   background: #4190b9;
 }
 .apps-page section:nth-child(5) {
-  background: #dadada;
+  background: #181c1d;
 }
 .apps-page section.download-app {
   text-align: center;
@@ -1153,7 +1153,7 @@ iframe {
 .features-page,
 .courses-page,
 .class-notes-page {
-  background: #dadada;
+  background: #181c1d;
   color: #ffffff;
 }
 .product-page h1,
@@ -1290,7 +1290,7 @@ iframe {
 .features-page .page-content section > a img {
   width: 100%;
   margin-top: 20px;
-  border: 3px solid #282828;
+  border: 3px solid #f5f5f5;
 }
 @media (max-width: 600px) {
   .product-page .page-content h2,
@@ -1325,7 +1325,7 @@ iframe {
   min-width: 250px;
   padding: 15px;
   color: #ffffff;
-  background: #ffffff;
+  background: #323538;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
