--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -210,6 +210,7 @@
     margin: 4px 0;
     padding: 5px 16px;
     border-radius: 4px;
+    white-space: normal;
 
     &.no-text {
         border-radius: 100%;
