--- a/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
+@{
+    var direction = System.Threading.Thread.CurrentThread.CurrentUICulture.TextInfo.IsRightToLeft ? "right" : "left";
+}
 <div ng-controller="ChatController as c">
     <div class="chat">
         <div class="content" ng-class="{stateChat: c.state === 3}">
@@ -21,40 +24,61 @@
                         </button>
                     </form>
                     <div class="users-list scrollbar" sb-scroll ng-scrollbars ng-scrollbars-paging ng-scrollbars-paging-function="cu.usersPaging" ng-scrollbars-config="c.scrollSetting" srph-infinite-scroll="cu.usersPaging()" container="true">
-                        <section class="favorits">
+                        <section class="favorits" ng-show="favorits.length">
                             <div class="header">
                                 <md-icon md-svg-icon="t:star"></md-icon>
                                 @*@Html.Svg("~/images/site/icons.svg", "star")*@
                                 <h1>@ChatResources.FavoritsHeader</h1>
+                                <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                    <div>@ChatResources.FavoritsHeader</div>
+                                    <div>{{e.name}}</div>
+                                </md-tooltip>
                             </div>
                             <ul class="users-sub-list">
-                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in cu.users | filter: {section : 1 } track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in favorits = (cu.users | filter: {section : 1 }) track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                                    <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                        <div>@ChatResources.ChatWith</div>
+                                        <div>{{e.name}}</div>
+                                    </md-tooltip>
                                 </li>
                             </ul>
                         </section>
-                        <section class="classmates">
+                        <section class="classmates" ng-show="classmates.length">
                             <div class="header">
                                 <md-icon md-svg-icon="t:group"></md-icon>
                                 @*@Html.Svg("~/images/site/icons.svg", "group")*@
                                 <h1>@ChatResources.ClassmatesHeader</h1>
+                                <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                    <div>@ChatResources.ClassmatesHeader</div>
+                                    <div>{{e.name}}</div>
+                                </md-tooltip>
                             </div>
-
                             <ul class="users-sub-list">
-                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in cu.users | filter: {section : 2 } track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in classmates = (cu.users | filter: {section : 2 }) track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                                    <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                        <div>@ChatResources.ChatWith</div>
+                                        <div>{{e.name}}</div>
+                                    </md-tooltip>
                                 </li>
-
                             </ul>
                         </section>
-                        <section class="schoolmates">
+                        <section class="schoolmates" ng-show="schoolmates.length">
                             <div class="header">
                                 <md-icon md-svg-icon="t:crowd"></md-icon>
                                 @*@Html.Svg("~/images/site/icons.svg", "crowd")*@
                                 <h1>@ChatResources.SchoolmatesHeader</h1>
+                                <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                    <div>@ChatResources.SchoolmatesHeader</div>
+                                    <div>{{e.name}}</div>
+                                </md-tooltip>
                             </div>
-                            <ul class="users-sub-list" ng-if="cu.users.length">
-                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in cu.users | filter: {section : 3 } track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                            <ul class="users-sub-list">
+                                <li ng-click="cu.chat(e)" class="user" ng-repeat="e in schoolmates = (cu.users | filter: {section : 3 }) track by e.id" ng-class="{online: e.online}" ga-track-event="['chat', 'started-conversation']" ng-include="'chat-user-template.html'">
+                                    <md-tooltip class="chat-tooltip" md-direction="@direction">
+                                        <div>@ChatResources.ChatWith</div>
+                                        <div>{{e.name}}</div>
+                                    </md-tooltip>
                                 </li>
-
                             </ul>
                         </section>
                     </div>
