--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -4,7 +4,7 @@
     <a class="university" ga-track-event="['dashboard', 'to university']" ng-if="u.loaded" ng-href="{{::u.info.url}}">
         <div class="top">
             <img class="universityimg" ng-src="{{::u.info.logo}}" alt="univerisy picture" width="52" height="52" />
-            <div class="uni-name" ng-bind="::u.info.name"></div>
+            <div class="uni-name ellipsis" ng-bind="::u.info.name"></div>
         </div>
         <div class="bottom">
             <div class="action-btn">@GeneralResources.BrowseClasses</div>
