--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.css
@@ -274,6 +274,11 @@
 }
 .invite.invite-dialog .content .center .user .md-list-item-text {
   margin-left: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
 }
 .invite.invite-dialog .content .center .user .checkbox:before {
   content: '\2714';
