--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.css
@@ -210,7 +210,7 @@
 }
 .accountPage-wrapper .private-departments .requests .user-name {
   margin-left: 10px;
-  color: #ffffff;
+  color: #212325;
   -ms-word-break: break-word;
   word-break: break-word;
 }
