--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
@@ -261,7 +261,7 @@
         .requests {
             .user-name {
                 margin-left: 10px;
-                color: @textColorWhite;
+                color: @textColorBlack;
                 -ms-word-break: break-word;
                 word-break: break-word;
             }
