--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -130,7 +130,7 @@
         top: 70px;
         left: 0;
         right: 0;
-        // background: @textColorBlack;
+        background: #f9f9f9;
         z-index: 1;
     }
 
@@ -848,6 +848,9 @@
     }
 }
 
+html.expanded-chat .chat-tooltip {
+    display: none;
+}
 
 html:not(.expanded-chat) {
     .chat {
