--- a/Zbang.Cloudents.Mvc4WebRole/Views/Share/InviteDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Share/InviteDialog.cshtml
@@ -40,7 +40,7 @@
                                 <div class="user" layout="row" layout-align="start center" ng-class="{selected: contact.isSelected}" ng-click="i.toggleContact(contact)">
                                     <div class="flip-container">
                                         <div class="flipper">
-                                            <div class="avatar"><user-image class="md-avatar" name="contact.name" image="contact.image" width="40" height="40"></user-image></div>
+                                            <div class="avatar"><user-image class="md-avatar" name-title name="contact.name" image="contact.image" width="40" height="40"></user-image></div>
                                             <div class="checkbox"></div>
                                         </div>
                                     </div>
