--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.less
@@ -33,6 +33,10 @@
                 display: none !important;
             }
         }
+
+        #intercom-container {
+            display: none;
+        }
     }
 
     .home-page-body {
