--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -101,7 +101,7 @@
             }
         }
 
-        li.nav-item {
+        li {
             width: 100%;
             padding-right: 10px;
             margin: 2px 0;
@@ -250,7 +250,7 @@
     }
 }
 
-.menu-toggle-list {
+ .main-md-sidenav .menu-toggle-list {
     background: #fff;
     max-height: 1300px;
     overflow: hidden;
@@ -264,6 +264,10 @@
     transition: 0.75s cubic-bezier(0.35, 0, 0.25, 1);
     -o-transition-property: max-height;
     transition-property: max-height;
+
+    li {
+        padding: 0;
+    }
 }
 
 
