--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -60,9 +60,7 @@
   margin-top: 3px;
 }
 .folder-selected {
-  margin-bottom: 20px;
-  margin-left: 8px;
-  margin-right: 8px;
+  margin: 8px 8px 20px 8px;
 }
 .folder-selected .text {
   color: #ffffff;
@@ -167,6 +165,9 @@ library-list {
 }
 .add svg {
   fill: #212325;
+}
+md-menu-item > a.md-button {
+  padding-top: 0;
 }
 .folders md-toast.md-default-theme .md-toast-content,
 .folders md-toast .md-toast-content {
@@ -650,7 +651,7 @@ library-list {
 .quiz .bottom .name {
   display: inline-block;
   margin-top: 5px;
-  padding: 0 6px;
+  padding: 0 6px 0 25px;
   max-height: 40px;
   /* Fallback for non-webkit */
   font-size: 14px;
@@ -865,7 +866,7 @@ library-list {
   margin: 0 auto 10px;
 }
 .upload .uploadSection span:hover {
-  background: #dadce2;
+  background: #f0f0f0;
 }
 .upload .form-horizontal {
   padding: 0 10px 10px 10px;
