--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -53,7 +53,7 @@
             &:not(.disabled):not(.active):hover {
                 background: #f5f5f5;
             }
-            
+
 
             &.active {
                 background: @buttonColorBlue;
@@ -61,7 +61,8 @@
                 .text {
                     color: @textColorWhite;
                 }
-                md-icon{
+
+                md-icon {
                     fill: @textColorWhite;
                 }
             }
@@ -622,6 +623,7 @@
     .new-comment-border, .reply-wrapper {
         md-input-container {
             textarea.md-input {
+                font-size: 17px;
                 min-height: 50px;
                 background: none;
                 width: 100%;
